Knife tool cut preview line becomes black. #59505

Closed
opened 2018-12-17 19:21:24 +01:00 by Eugene Kostyuk · 17 comments

System Information
Operating system:Windows 10 x64
Graphics card:GTX 1050ti

Blender Version
Broken: blender2.8 beta, December17 02:51:21, 9149e89421

Short description of error
While using the knife tool, the preview line of the cut seems to be randomly changing it`s color to black.
Exact steps for others to reproduce the error
In edit mode, press k to switch to knife tool. Begin a cut. End cut with a spacebar. The next cut line might appear black. I also pressed undo button, and the line appeared black when i started a new cut. The other time it was normal. I could not see a regularity here.
Screenshot_4.png

Screenshot_5.png

**System Information** Operating system:Windows 10 x64 Graphics card:GTX 1050ti **Blender Version** Broken: blender2.8 beta, December17 02:51:21, 9149e894210 **Short description of error** While using the knife tool, the preview line of the cut seems to be randomly changing it`s color to black. **Exact steps for others to reproduce the error** In edit mode, press k to switch to knife tool. Begin a cut. End cut with a spacebar. The next cut line might appear black. I also pressed undo button, and the line appeared black when i started a new cut. The other time it was normal. I could not see a regularity here. ![Screenshot_4.png](https://archive.blender.org/developer/F5983082/Screenshot_4.png) ![Screenshot_5.png](https://archive.blender.org/developer/F5983085/Screenshot_5.png)
Author

Added subscriber: @EugeneKostyuk

Added subscriber: @EugeneKostyuk

Added subscriber: @ZedDB

Added subscriber: @ZedDB

I can not reproduce this on the default cube scene with a build from today. Could you try a recent build from https://builder.blender.org/download/ and see if you stil get this issue?

Also be sure that you have the latest GPU drivers for your card.

I can not reproduce this on the default cube scene with a build from today. Could you try a recent build from https://builder.blender.org/download/ and see if you stil get this issue? Also be sure that you have the latest GPU drivers for your card.
Author

Hi! I checked the drivers they were up to date. In latest build 9dde3e42a7 loaded the factory settings. Had no bugged result on a default cube ( tried 10 times in a row, or so ). But then created a new plane, changed it`s position, entered the edit mode and the first cut was black. Every newly created plane had same result (at the most). First cut is black, second one is normal.

Hi! I checked the drivers they were up to date. In latest build 9dde3e42a7c5 loaded the factory settings. Had no bugged result on a default cube ( tried 10 times in a row, or so ). But then created a new plane, changed it`s position, entered the edit mode and the first cut was black. Every newly created plane had same result (at the most). First cut is black, second one is normal.

I still can't seem to reproduce this with a plane. Could you provide a .blend file where you can easily reproduce this? IE:

  1. Open blend file
  2. Cut with knife
  3. Black knife cut
I still can't seem to reproduce this with a plane. Could you provide a .blend file where you can easily reproduce this? IE: 1. Open blend file 2. Cut with knife 3. Black knife cut
Author

{F6025608}knife_example.blend
Attached a file. Steps to reproduce:
1.delete a cube
2.create a new one
3.cut with a knife

A bug shows itself in the process, when you have not yet finished the cut with spacebar or enter key.
It repeats often, not 100% times though.
Been able to reproduce this bug on a different pc at work.

Hope this helps.

{[F6025608](https://archive.blender.org/developer/F6025608/Screenshot_1.jpg)}[knife_example.blend](https://archive.blender.org/developer/F6025561/knife_example.blend) Attached a file. Steps to reproduce: 1.delete a cube 2.create a new one 3.cut with a knife A bug shows itself in the process, when you have not yet finished the cut with spacebar or enter key. It repeats often, not 100% times though. Been able to reproduce this bug on a different pc at work. Hope this helps.

Added subscriber: @fclem

Added subscriber: @fclem

Nope, still can reproduce this... :C

I'm guessing this is a GPU/Windows specific bug or something.

@fclem any ideas?

Nope, still can reproduce this... :C I'm guessing this is a GPU/Windows specific bug or something. @fclem any ideas?
Author

My system at work: Windows 10 pro 64 bit. GTX 650ti.
System at home: Windows 10 pro 64 bit. GTX 1050ti.
Both have 8 gigs of ram.

My system at work: Windows 10 pro 64 bit. GTX 650ti. System at home: Windows 10 pro 64 bit. GTX 1050ti. Both have 8 gigs of ram.
Clément Foucault was assigned by Sebastian Parborg 2018-12-21 14:50:12 +01:00

You might as well try to run blender with --debug-gpu and attach the output here (Run blender from cmd with blender.exe --debug-gpu > output.txt and attach output.txt after you have reproduced the black line issue)

You can also try to run with --debug-gpu-force-workarounds and see if that helps.

You might as well try to run blender with `--debug-gpu` and attach the output here (Run blender from cmd with `blender.exe --debug-gpu > output.txt` and attach output.txt after you have reproduced the black line issue) You can also try to run with `--debug-gpu-force-workarounds` and see if that helps.
Author

video_debug.txt

With debug on. The last cut action was bugged.

[video_debug.txt](https://archive.blender.org/developer/F6026089/video_debug.txt) With debug on. The last cut action was bugged.
Author

Strange. With debug on i barely was able to catch this bug.
With no debug it was 100% reproducable.
Used c9df453ce7 build for debugging.

Strange. With debug on i barely was able to catch this bug. With no debug it was 100% reproducable. Used c9df453ce70b build for debugging.

I can reproduce:

  • Factory Startup
  • Edit mode > Knife > confirm
  • Undo
  • Knife again

Fixing...

I can reproduce: - Factory Startup - Edit mode > Knife > confirm - Undo - Knife again Fixing...

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by dafaa6f228

This issue was referenced by dafaa6f22881419ac55f2f3fe3de9ac4023aa108

This issue was referenced by 34a538ba1b

This issue was referenced by 34a538ba1b73e7a464d26dd3f5902774c7867766

This issue was referenced by 67dc68d104

This issue was referenced by 67dc68d104a5b2d62e49a94f2a26b0b28c94fac6
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#59505
No description provided.