source/blender/editors/include/UI_resources.h
@@ -369,6 +369,7 @@ void UI_GetThemeColor3ubv(int colorid, unsigned char col[3]);
 void UI_GetThemeColor4ubv(int colorid, unsigned char col[4]);
 
 // get a theme color from specified space type
+void UI_GetThemeColorType3ubv(int colorid, int spacetype, char col[3]);
 void UI_GetThemeColorType4ubv(int colorid, int spacetype, char col[4]);
 
 // get theme color for coloring monochrome icons
